Actually started work on the assembler

--- a/bodoasm/proj/bodoasm.vcxproj
+++ b/bodoasm/proj/bodoasm.vcxproj
@@ -111,10 +111,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\asmblueprint.cpp" />
+    <ClCompile Include="..\src\assembler.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\srcfilemanager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\asmblueprint.h" />
+    <ClInclude Include="..\src\assembler.h" />
+    <ClInclude Include="..\src\srcfilemanager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
