--- a/bodoasm/proj/bodoasm.vcxproj.filters
+++ b/bodoasm/proj/bodoasm.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="..\src\srcfilemanager.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\lexer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\asmblueprint.h">
@@ -27,6 +30,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\srcfilemanager.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\lexer.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
