Making progress with Lexer.  Still has a bit of work to do

--- a/bodoasm/proj/bodoasm.vcxproj.filters
+++ b/bodoasm/proj/bodoasm.vcxproj.filters
@@ -21,6 +21,10 @@
     <ClCompile Include="..\src\lexer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\filenamepool.cpp" />
+    <ClCompile Include="..\src\error.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\asmblueprint.h">
@@ -33,6 +37,15 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\lexer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\position.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\filenamepool.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\error.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
