--- a/bodoasm/proj/bodoasm.vcxproj
+++ b/bodoasm/proj/bodoasm.vcxproj
@@ -112,6 +112,8 @@
   <ItemGroup>
     <ClCompile Include="..\src\asmblueprint.cpp" />
     <ClCompile Include="..\src\assembler.cpp" />
+    <ClCompile Include="..\src\error.cpp" />
+    <ClCompile Include="..\src\filenamepool.cpp" />
     <ClCompile Include="..\src\lexer.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\srcfilemanager.cpp" />
@@ -119,7 +121,10 @@
   <ItemGroup>
     <ClInclude Include="..\src\asmblueprint.h" />
     <ClInclude Include="..\src\assembler.h" />
+    <ClInclude Include="..\src\error.h" />
+    <ClInclude Include="..\src\filenamepool.h" />
     <ClInclude Include="..\src\lexer.h" />
+    <ClInclude Include="..\src\position.h" />
     <ClInclude Include="..\src\srcfilemanager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
