--- a/bodoasm/proj/bodoasm.vcxproj
+++ b/bodoasm/proj/bodoasm.vcxproj
@@ -113,19 +113,23 @@
     <ClCompile Include="..\src\asmblueprint.cpp" />
     <ClCompile Include="..\src\assembler.cpp" />
     <ClCompile Include="..\src\error.cpp" />
+    <ClCompile Include="..\src\expression.cpp" />
     <ClCompile Include="..\src\filenamepool.cpp" />
     <ClCompile Include="..\src\lexer.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\symboltable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\asmblueprint.h" />
     <ClInclude Include="..\src\assembler.h" />
     <ClInclude Include="..\src\basetypes.h" />
     <ClInclude Include="..\src\error.h" />
+    <ClInclude Include="..\src\expression.h" />
     <ClInclude Include="..\src\filenamepool.h" />
     <ClInclude Include="..\src\lexer.h" />
-    <ClInclude Include="..\src\orgblock.h" />
+    <ClInclude Include="..\src\blocktypes.h" />
     <ClInclude Include="..\src\position.h" />
+    <ClInclude Include="..\src\symboltable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
