--- a/bodoasm/proj/bodoasm.vcxproj.filters
+++ b/bodoasm/proj/bodoasm.vcxproj.filters
@@ -22,6 +22,12 @@
     <ClCompile Include="..\src\error.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\expression.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\symboltable.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\asmblueprint.h">
@@ -42,10 +48,16 @@
     <ClInclude Include="..\src\error.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\orgblock.h">
+    <ClInclude Include="..\src\basetypes.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\basetypes.h">
+    <ClInclude Include="..\src\blocktypes.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\expression.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\symboltable.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
