--- a/bodoasm/proj/bodoasm.vcxproj.filters
+++ b/bodoasm/proj/bodoasm.vcxproj.filters
@@ -9,16 +9,12 @@
     <ClCompile Include="..\src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\asmblueprint.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\assembler.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\lexer.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\filenamepool.cpp" />
     <ClCompile Include="..\src\error.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -28,11 +24,14 @@
     <ClCompile Include="..\src\symboltable.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\stringpool.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\asmdefinition.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\asmblueprint.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\assembler.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -40,9 +39,6 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\position.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\filenamepool.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\error.h">
@@ -58,6 +54,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\symboltable.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\stringpool.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\asmdefinition.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
