--- a/bodoasm/proj/bodoasm.vcxproj.filters
+++ b/bodoasm/proj/bodoasm.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\src\token.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\parser_expression.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\subparser.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\assembler.h">
@@ -72,6 +78,15 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\token.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\parsersubinstance.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\parser_expression.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\subparser.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
