--- a/bodoasm/proj/bodoasm.vcxproj.filters
+++ b/bodoasm/proj/bodoasm.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\src\parse_addrmode.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\directivespecs.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\assembler.h">
@@ -93,6 +96,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\parser_addrmode.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\directivespecs.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
