Resolving futures is complete.  Relative mode added to 6502.  6502 binary output now appears to be perfect!

--- a/bodoasm/proj/bodoasm.vcxproj
+++ b/bodoasm/proj/bodoasm.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\assembler.cpp" />
+    <ClCompile Include="..\src\assembler_directives.cpp" />
     <ClCompile Include="..\src\directivespecs.cpp" />
     <ClCompile Include="..\src\error.cpp" />
     <ClCompile Include="..\src\expression.cpp" />
